Consolidate search button styles, fix ellipsis on Safari.

--- a/admin/themes/default/css/sass/components/_search.scss
+++ b/admin/themes/default/css/sass/components/_search.scss
@@ -37,77 +37,53 @@
         padding-right: 72px;
     }
     
-    button {
-        width: 36px;
-        height: 36px;
-        padding: 0 5px;
-        position: absolute;
-        top: 0;
-        right: 0;
-        text-indent: -9999px;
-        transition: 0.5s all;
-        margin: 0;
-        
-        color: #fff;
-        background: $darkred;
-        border-radius: 0;
-        border: none;
-        text-shadow: none;
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
-        
-        &:after {
-            font-family: "Font Awesome 5 Free";
-            display: block;
-            font-weight: 900;
-            content: "\f002";
-            text-indent: 0;
-            text-align: center;
-        }
-        &:hover {
-			background: $darkestred;
-			color: white;
-		}
-    }
 }
 
-#advanced-search {
+#advanced-search,
+#search-form button {
     width: 36px;
     height: 36px;
-    line-height: 16px;
-    text-indent: -9999px;
-    text-decoration: none;
+    padding: 0 5px;
     position: absolute;
-    transition: 0.5s all;
     top: 0;
-    right: 37px;
-    margin: 0;    
+    right: 0;
+    text-indent: -9999px;
+    transition: 0.5s all;
+    margin: 0;
     
     color: #fff;
     background: $darkred;
-    border: none;
     border-radius: 0;
+    border: none;
     text-shadow: none;
     display: inline-flex;
     justify-content: center;
     align-items: center;
-
-	&:after {
-	    content: "\f141";
-	    font-family: "Font Awesome 5 Free";
+    
+    &:after {
+        font-family: "Font Awesome 5 Free";
+        position: absolute;
+        display: block;
         font-weight: 900;
-	    font-size: 16px;
-	    display: block;
-	    text-indent: 0;
-	    text-align: center;
-	}
-	&:hover {
-		background: $darkestred;
-		color: white;
-	}
+        content: "\f002";
+        text-indent: 0;
+        text-align: center;
+    }
+    &:hover {
+        background: $darkestred;
+        color: white;
+    }
 }
 
+#advanced-search {
+    position: absolute;
+    top: 0;
+    right: 37px;
+
+    &:after {
+        content: "\f141";
+    }
+}
 
 #advanced-form {
     display: none;
